--- a/styles.css
+++ b/styles.css
@@ -146,13 +146,13 @@ img {
 .hero-section {
   position: relative;
   height: 100vh; /* Altura fija para la sección hero */
-  padding-top: 45%;
+  padding-top: 85%;
   background-color: var(--background);
   overflow: hidden; /* Evita que las imágenes sobresalgan */
 }
 
 .hero-image-container {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
 }
