--- a/styles.css
+++ b/styles.css
@@ -301,7 +301,7 @@ img {
 
 /* Carousels */
 .carousels-container {
-  margin-top: -150px;
+  /* margin-top: -150px;
   position: relative;
   z-index: 10;
   padding-bottom: 5rem;
